--- a/test/test-app/manual/childWebView/main.html
+++ b/test/test-app/manual/childWebView/main.html
@@ -13,6 +13,7 @@
         When target is _self the content should be loaded in the current webview
     </p>
 
+    <a href="../index.htm">Back</a>
     <h1>Declarative API</h1>
 
     <h2>1. target=_blank</h2>
@@ -20,6 +21,12 @@
     <p>
         The above link has a <em>target=_blank</em> attribute and should load
         a new page in a separate web view when clicked.
+    </p>
+
+    <h3><a href="http://mobile.theverge.com" target="_blank">Click here</a></h3>
+    <p>
+        The above link has a <em>target=_blank</em> attribute and should load
+        a new page in a separate web view when clicked and be scaled well :).
     </p>
 
     <h2>2. target=_self</h2>
@@ -188,6 +195,7 @@
             results.textContent = childWindow ? 'Success! ' + childWindow.toString() : 'Failed to get child window reference';
         });
     }());
-    </script>
+</script>
+    <a href="../index.htm">Back</a>
 </body>
 </html>
