--- a/test/test-app/automatic/SpecRunner.htm
+++ b/test/test-app/automatic/SpecRunner.htm
@@ -104,20 +104,21 @@
         <input type="checkbox" value="blackberry.io.filetransfer">blackberry.io.filetransfer</input><br />
         <input type="checkbox" value="blackberry.io">blackberry.io</input><br />
         <input type="checkbox" value="blackberry">blackberry</input><br />
+        <input type="checkbox" value="blackberry.notification">blackberry.notification</input><br />
         <input type="checkbox" value="blackberry.pim.contacts">blackberry.pim.contacts</input><br />
         <input type="checkbox" value="blackberry.pim.calendar">blackberry.pim.calendar</input><br />
         <input type="checkbox" value="blackberry.push">blackberry.push</input><br />
+        <input type="checkbox" value="blackberry.sensors">blackberry.sensors</input><br />
         <input type="checkbox" value="blackberry.system">blackberry.system</input><br />
         <input type="checkbox" value="blackberry.ui.contextmenu">blackberry.ui.contextmenu</input><br />
+        <input type="checkbox" value="blackberry.ui.cover">blackberry.ui.cover</input><br />
         <input type="checkbox" value="blackberry.ui.dialog">blackberry.ui.dialog</input><br />
         <input type="checkbox" value="blackberry.ui.toast">blackberry.ui.toast</input><br />
         <input type="checkbox" value="blackberry.bbm.platform">blackberry.bbm.platform</input><br />
         <input type="checkbox" value="crossOrigin">crossOrigin</input><br />
-        <input type="checkbox" value="remoteFunctionCall">remoteFunctionCall</input><br />
-        <input type="checkbox" value="blackberry.notification">blackberry.notification</input><br />
-        <input type="checkbox" value="blackberry.sensors">blackberry.sensors</input><br />
-        <input type="checkbox" value="blackberry.ui.cover">blackberry.ui.cover</input><br />
+        <input type="checkbox" value="enableFlash">enableFlash</input><br />
         <input type="checkbox" value="navigator.geolocation">navigator.geolocation</input><br />
+        <input type="checkbox" value="remoteFunctionCall">remoteFunctionCall</input><br />
     </form>
     <br />
 
